--- a/src/config/ade20k-mobilenetv2dilated-c1_deepsup.yaml
+++ b/src/config/ade20k-mobilenetv2dilated-c1_deepsup.yaml
@@ -37,6 +37,6 @@ VAL:
 
 TEST:
   checkpoint: "epoch_20.pth"
-  result: "./"
+  result: "/home/grobots/"
 
 DIR: "ckpt/ade20k-mobilenetv2dilated-c1_deepsup"
